<resources>
    <string name="app_name">Sam\'s Delivery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="customer_phone">Customers Phone Number</string>
    <string name="customer_address">Customers Address</string>
    <string name="customer_apt">Customers Apartment Number</string>
    <string name="customer_ready_in">Ready In</string>
    <string name="door_bell">door bell not working</string>
    <string name="customer_remark">Input Note, please</string>
    <string name="action_send_order">Send Order</string>
    <string name="change_old_pwd">old password</string>
    <string name="change_new_pwd">new password</string>
    <string name="action_change_pwd">reset</string>
    <string name="starting_point">Starting Point：</string>
    <string name="destination">Destination：</string>
    <string name="customer_phone_short">Cust.Phone：</string>
    <string name="notes">Comments：</string>
    <string name="notes_short">Comments</string>
    <string name="others">Others：</string>
    <string name="action_submit_order">submit</string>
    <string name="order_submit_success">Operation Successfully Completed</string>
    <string name="order_submit_success_sub">Order has been sent, wait for being accepted</string>
    <string name="menu_order_list">Order List</string>
    <string name="menu_change_pwd">Change Password</string>
    <string name="menu_new_order">New Order</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="dialog_order_list">Order Lists</string>
    <string name="dialog_continue_to_send_order">Continue To Send Orders</string>
    <string name="toolbar_title_changepwd">Change Password</string>
    <string name="toolbar_title_order_detail">Order Detail</string>
    <string name="toolbar_title_order_list">Order List</string>
    <string name="toolbar_title_search_order">Search Order</string>
    <string name="toolbar_title_order_new">New Order</string>

    <string name="status_wait">Wait</string>
    <string name="status_accept">Accept</string>
    <string name="status_delivery">Delivery</string>
    <string name="status_finish">Finish</string>
    <string name="status_cancle">Cancle</string>
    <string name="status_back">Back</string>
    <string name="status_new">New</string>
    <string name="status_making">Making</string>

    <string name="status_cancle_btn">Cancle</string>
    <string name="status_delivery_btn">Delivery</string>
    <string name="status_resubmit_btn">Resubmit</string>
    <string name="status_finish_btn">Finish</string>

    <string name="driver_name">Driver Name：</string>
    <string name="order_no">Order No：</string>
    <string name="finished_time">Finished Time：</string>


    <string name="exit_after_press_again">Exit After Press Again</string>

    <string name="search_order_number">Order Number</string>
    <string name="search_driver_phone">Driver Phone</string>
    <string name="search_customer_phone">Customer Phone</string>
    <string name="search_status">Inquiry By Order Status</string>

    <string name="cannt_be_empty_same_time">Order Number,Driver Phone,Customer Phone cannt be empty at the same time</string>
    <string name="dialog_check_update">Check Update</string>
    <string name="dialog_update_message">A new version was detected,Need Update Right Now</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_updateing">Updating</string>
    <string name="network_error">NetWork Error</string>


    <string name="tab_home">Home</string>
    <string name="tab_order">Order</string>
    <string name="tab_mine">Mine</string>


    <string name="tab_all_list">All List</string>
    <string name="tab_reply_list">Waiting For Reply</string>

    <string name="menu_my_reply">My Reply</string>
    <string name="menu_message">Message</string>

    <string name="refuse_order_btn_text">Refuse Order</string>
    <string name="accept_order_btn_text">Accept Order</string>
    <string name="toolbar_title_message">Message</string>

    <string name="dialog_permission_title">Apply for permission</string>
    <string name="dialog_permission_message">Missing location permission</string>
    <string name="dialog_permission_grant">OK,set it up</string>
    <string name="dialog_permission_deny">Deny</string>
    <string name="permission_already_deny">You has refused to locate permissions can be opened in the settings screen</string>
    <string name="toolbar_title_print">Print</string>
    <string name="address">Address：</string>
    <string name="username">Customer：</string>
    <string name="order_new_no">No：</string>
    <string name="remark">Comments：</string>
    <string name="es_arrival_time">Prepare time</string>
    <string name="expect_arrival_time">Requested for：</string>
    <string name="tip_price">Tip for driver</string>
    <string name="ship_price">Delivery(with Tax)</string>
    <string name="taxation">HST-01</string>
    <string name="taxation_tvq">HST-02</string>
    <string name="income_price">Credit</string>
    <string name="coupon_price">Voucher</string>
    <string name="activity_price">Discount</string>
    <string name="sum">Total</string>
    <string name="reply_order">Reply</string>
    <string name="toolbar_title_my_reply">My Reply</string>
    <string name="alert_confirm">confirm</string>
    <string name="alert_cancel">cancel</string>
    <string name="reply_patient">Please Reply Patiently</string>
    <string name="alert_confirm_refuse">Are you sure you refuse the order？</string>


    <string name="dialog_reminder">Reminder</string>
    <string name="dialog_reminder_message">You do not open the location permissions, please go to the phone settings interface, open the application positioning rights, and then login</string>
    <string name="dialog_setting">Setting</string>
    <string name="print_complete">Print Complete</string>
    <string name="es_arrival_time_check">Please select  estimated time of arrival</string>
    <string name="bluetooth_unsupport">This Device doesn\'t support bluetooth</string>
    <string name="print_cancel">Print Cancel</string>
    <string name="tab_delivery_order_list">Delivery Orders</string>
    <string name="tab_ma_order_list">MA Orders</string>
    <string name="auto_login">Automatic login</string>
    <string name="logining">Logining</string>
    <string name="check_user">Username can not be empty</string>
    <string name="check_pwd">Password can not be empty</string>
    <string name="check_old_pwd">Old password can not be empty</string>
    <string name="check_new_pwd">New password can not be empty</string>
    <string name="check_pwd_length">The password length should be a 6-digit string</string>
    <string name="check_customer_phone">Customer\'s phone number can not be empty</string>
    <string name="check_phone_length">The phone number should be a 10-digit string</string>
    <string name="check_address">Address can not be empty</string>
    <string name="print_device">Print Device</string>
    <string name="ticket_top_title">Menu Alliance</string>
    <string name="ticket_order_no">Order number:</string>
    <string name="ticket_item">Items</string>
    <string name="ticket_amounts">Amounts</string>
    <string name="ticket_price_ea">Price/ea</string>
    <string name="ticket_customer_info">Customer Info:</string>
    <string name="ticket_purchaser">Name:</string>
    <string name="ticket_tel">Telephone:</string>
    <string name="ticket_will_be_paid">Order will be paid:</string>
    <string name="ticket_bottom_text">Thanks for ordering from</string>
    <string name="no_data">There is no data，Try to Pull to Refresh</string>
    <string name="subtotal">Subtotal</string>
    <string name="permission_location_success">Location permission access success</string>
    <string name="permission_location_fail">Location permission access failure</string>

</resources>
