<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_username_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:passwordToggleEnabled="true"
            android:padding="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_basic_color"/>

            <requestFocus/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_textinputlayout"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_username_textinputlayout"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/text_basic_color"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:theme="@style/Success.Button.Theme"/>

        <CheckBox
            android:id="@+id/login_auto_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/auto_login"/>

    </LinearLayout>

</LinearLayout>