<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/Login.Button.Theme">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rest_phone_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rest_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_phone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_basic_color"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rest_address_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rest_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_address"
                    android:inputType="textMultiLine"
                    android:text="Click To Seach"
                    android:textColor="@color/text_basic_color"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rest_apt_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rest_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_apt"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_basic_color"/>


            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_finished_time"
                    android:textColor="@color/text_basic_color"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/rest_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/text_basic_color"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="备注"
                    android:textColor="@color/text_basic_color"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/rest_door_bell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/door_bell"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/menu_sign_out"
                android:textColor="@color/text_basic_color"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/rest_remark_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/rest_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_remark"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:textColor="@color/text_basic_color"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>