<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/new_order_detail_toolbar"
        layout="@layout/widget_toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context="com.gaoyy.delivery4res.main.OrderDetailActivity">

        <TextView
            android:id="@+id/new_order_detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="2017-2-56 55"
            android:textColor="@color/text_basic_color"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/order_no"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_order_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/starting_point"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_start_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/destination"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_distination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/customer_phone_short"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/notes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/finished_time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_finish_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/others"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/new_order_detail_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_basic_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:map="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/new_order_detail_map"
                  android:name="com.google.android.gms.maps.SupportMapFragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  map:cameraZoom="10"
            />
    </LinearLayout>
</LinearLayout>