<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <TextView
        android:id="@+id/item_common_addtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="2017-09-04 22:08:33"
        android:textColor="@color/text_basic_color"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/item_common_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="拉丁区, 蒙特利尔, 魁北克省, 加拿大"
            android:textColor="@color/text_basic_color"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/item_common_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="买家"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/customer_phone_short"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/item_common_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1380433405"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_new_no"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/item_common_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3280920170904220833"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/item_common_goods_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


</LinearLayout>
